--- a/ws_style.css
+++ b/ws_style.css
@@ -1,12 +1,27 @@
 body {
-	background-color : lightblue;
+	background-color : #ADD8E6;
 }
 
-p {
+annotate {
+  font-style : italic;
+  text-align: left;
+  color: red;
+}
+
+body {
 	text-align: center;
 }
-div {
-	text-align: center;
+div.desc {
+	text-align : left;
+	font-style : italic;
+	font-size  : 1.2em;
+	color: #2F4F4F;
+}
+
+h3 {
+	color : white;
+	padding-top : 2px;
+	padding-bottom: 2px;
 }
 
 .next {
@@ -36,14 +51,62 @@ div {
 	font-size: 12px;
 }
 
+.state {
+	fill: yellow;
+}
+
 .labels {
-	fill: tomato;
+	fill: black;
 	font-weight: bold;
+	font-size: 0.5em;
+	font-style: normal;
+	font-family: Helvetica;
+	color: black;
 }
 
 #legend text {
-	font-size: 0.9em;
-	color: #666;
-	font-weight: normal;
+    position: absolute;
+    top: 250px;
+    right: 125px;
+    width: 180px;
+    text-align: left;
+    color: #B5B5B5;
 }
+
+#tooltip {
+	color: black; 
+	background: #fff; 
+	border-radius: 3px; 
+	box-shadow: 0px 0px 2px 0px #a6a6a6; 
+	padding: .2em; 
+	text-shadow: #f5f5f5 0 1px 0;
+	opacity: 0; 
+	position: absolute;
+	text-align: center;
+	width: 120px;
+	height: 50px;
+	font-size: 0.5em;
+	font-style: normal;
+	font-family: Helvetica;
+}
+
+.dropbtn {
+  background-color: #ffa500;
+  color: white;
+  padding: 12px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+}
+
+#slide2_dd {
+	position: relative;
+	color : white;
+	padding-top : 5px;
+	padding-bottom : 5px;
+	font-weight: bold;
+	flex-wrap: wrap;
+	font-size: 2.5em;
+}
+
 	
