--- a/ws_style.css
+++ b/ws_style.css
@@ -8,6 +8,11 @@ annotate {
   color: red;
 }
 
+#dropdown {
+	float : left;
+	font-style : italic;
+}
+
 body {
 	text-align: center;
 }
@@ -23,6 +28,7 @@ h3 {
 	padding-top : 2px;
 	padding-bottom: 2px;
 }
+
 
 .next {
 	color : white;
@@ -90,6 +96,26 @@ h3 {
 	font-family: Helvetica;
 }
 
+#charttooltip {
+	color: black; 
+	background: #fff; 
+	border-radius: 3px; 
+	box-shadow: 0px 0px 2px 0px #a6a6a6; 
+	padding: 5px;
+	border: solid 1px black;
+	text-shadow: #f5f5f5 0 1px 0;
+	position: absolute;
+	text-align: center;
+	width: 120px;
+	height: 50px;
+	font-size: 0.5em;
+	font-style: normal;
+	font-family: Helvetica;
+	left: 400px;
+    top: 300px;
+	display: none;
+}
+
 .dropbtn {
   background-color: #ffa500;
   color: white;
@@ -106,7 +132,7 @@ h3 {
 	padding-bottom : 5px;
 	font-weight: bold;
 	flex-wrap: wrap;
-	font-size: 2.5em;
+	font-size: 0.5em;
 }
 
 	
