--- a/ws_style.css
+++ b/ws_style.css
@@ -116,6 +116,26 @@ h3 {
 	display: none;
 }
 
+#bgtooltip {
+	color: black; 
+	background: #fff; 
+	border-radius: 3px; 
+	box-shadow: 0px 0px 2px 0px #a6a6a6; 
+	padding: 5px;
+	border: solid 1px black;
+	text-shadow: #f5f5f5 0 1px 0;
+	position: absolute;
+	text-align: center;
+	width: 120px;
+	height: 50px;
+	font-size: 0.5em;
+	font-style: normal;
+	font-family: Helvetica;
+	left: 400px;
+    top: 300px;
+	display: none;
+}
+
 .dropbtn {
   background-color: #ffa500;
   color: white;
